--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
-  text-align: center;
+body{
+  background-color: lightgrey;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header{
+ display: flex;
+ justify-content: flex-end;
+ align-items: center;
+ flex-wrap: wrap;
+ background-color: white;
+ padding: 0 1.5rem;
+ box-shadow:  0 5px 2px rgba(0, 0, 0, .3);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-group{
   display: flex;
   flex-direction: column;
+  margin: .5rem;
+}
+
+.form-group > label{
+  color: #777;
+  font-size: .75rem;
+  margin-bottom: .25rem;
+}
+
+.btn{
+  background-color:lightskyblue;
+  color: aliceblue;
+}
+
+
+.card-grid {
+  display: grid;
   align-items: center;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 1rem;
+}
+
+.card{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  position: relative;
+  border-radius: .25rem;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, .3);
+  background-color: white;
+  transform-style: preserve-3d ;
+  
+  padding: .5rem;
+ 
+  transition: 180ms;
+  transform: perspective(1000px) rotateY(var(--rotate-y, 0))
+  translateY(var(--translate-y, 0));
 }
 
-.App-link {
-  color: #61dafb;
+.card:hover {
+  --translate-y: -2px;
+  box-shadow: 0 0 5px 2px  rgba(0, 0, 0, .6);
+}
+.card .front{
+  left: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card.flip{
+  --rotate-y: 180deg;
+}
+
+.card .front,
+.card .back {
+  position: absolute;
+  padding: 1rem;
+  backface-visibility: hidden; 
+}
+
+.card .back {
+  transform: rotateY(180deg);
+}
+
+
+.flashcard-options {
+  margin-top: .5rem;
+
+
+}
+.flashcard-option {
+  margin-top:  .25rem;
+  color: rgb(37, 37, 37);
+  font-size: .75rem;
+
+}
+
+.flashcard-option:first-child {
+  margin-top: 0;
 }
